welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: illegal start of simple expression
	else if (getDirection() == Direction.EST && !estFaceMur)) {gauche();avance();gauche()}
                                                                ^